[gd_scene load_steps=8 format=3 uid="uid://lwom2ncjcxv6"]

[ext_resource type="Script" path="res://Scripts/Stats_ui.gd" id="1_tll61"]
[ext_resource type="Theme" uid="uid://c3g0j1v0w7yax" path="res://Assets/Themes/defalut_theme.tres" id="2_fub41"]
[ext_resource type="Shader" path="res://Interface/Blur.gdshader" id="2_je1eo"]
[ext_resource type="Texture2D" uid="uid://biir2u3vismbx" path="res://Assets/Sprites/Interface/exit_cross.png" id="3_tic3k"]
[ext_resource type="Texture2D" uid="uid://bnul7taww407w" path="res://Assets/Sprites/Interface/exit_cross_pressed.png" id="4_oyi2a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_difql"]
shader = ExtResource("2_je1eo")
shader_parameter/value = 1.5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j3ktb"]
bg_color = Color(0.164706, 0.164706, 0.278431, 0.933333)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.105882, 0.105882, 0.105882, 0.6)

[node name="Stats" type="CanvasLayer"]
layer = 2
script = ExtResource("1_tll61")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_difql")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -145.0
offset_right = 188.0
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_fub41")
theme_override_styles/panel = SubResource("StyleBoxFlat_j3ktb")

[node name="TextureButton" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -36.0
offset_top = 4.0
offset_right = -4.0
offset_bottom = 36.0
grow_horizontal = 0
texture_normal = ExtResource("3_tic3k")
texture_pressed = ExtResource("4_oyi2a")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.0
offset_top = 8.0
offset_right = 60.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Статистика"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -84.0
offset_right = 168.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="LabelStat" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Пройдено станций: 0"

[node name="LabelStat2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Зачищено комнат: 0"

[node name="LabelStat3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Ликвидировано врагов: 0"

[node name="LabelStat4" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Время на станциях: 0"

[node name="LabelStat5" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Игрок погиб: 0"

[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_texture_button_pressed"]
